# sf2g

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: linux.yml  macos.yml  windows.yml
CSFML/src/Graphics/: Font.cpp  RenderTexture.cpp  RenderWindow.cpp  Shader.cpp  Texture.cpp
SFML/: CMakeLists.txt  readme.md
SFML/cmake/: SFMLConfig.cmake.in  SFMLConfigDependencies.cmake.in
SFML/include/SFML/: Graphics.hpp  System.hpp  Window.hpp
SFML/include/SFML/Graphics/: Font.hpp  Image.hpp  Shader.hpp  Texture.hpp
SFML/src/SFML/: CMakeLists.txt
SFML/src/SFML/Graphics/: CMakeLists.txt  Font.cpp  Image.cpp  ImageLoader.cpp  Shader.cpp  Texture.cpp
SFML/src/SFML/Main/: SFMLActivity.cpp
SFML/src/SFML/System/: CMakeLists.txt
SFML/src/SFML/Window/: CMakeLists.txt
SFML/src/SFML/Window/Unix/: WindowImplX11.cpp
SFML/test/: CMakeLists.txt
SFML/tools/pkg-config/: sfml-all.pc.in
examples/: borrowed-resources.rs  clock.rs  cursor.rs  custom-shape.rs  joystick.rs  mouse.rs  opengl-context.rs  opengl.rs  rc-resources.rs  shader.rs  spritemark.rs  text-scale.rs  unicode-text-entry.rs  vertex-arrays.rs  vertex-buffers.rs  window-test.rs
src/: ffi.rs  lib.rs
src/ffi/: graphics.rs  graphics_bindgen.rs  system.rs  system_bindgen.rs  window.rs  window_bindgen.rs
src/graphics/: circle_shape.rs  color.rs  convex_shape.rs  custom_shape.rs  font.rs  mod.rs  rect.rs  rectangle_shape.rs  render_states.rs  render_target.rs  render_texture.rs  render_window.rs  shader.rs  shape.rs  sprite.rs  text.rs  text_style.rs  texture.rs  transformable.rs  vertex_buffer.rs
src/system/: clock.rs  mod.rs  string.rs  time.rs  vector2.rs  vector3.rs
src/window/: context.rs  joystick.rs  mod.rs  sensor.rs
