[package]
name = "sf2g"
description = "Minimal Rust binding for SFML2 Graphics submodule"
version = "0.1.0"
authors = ["crumblingstatue"]
documentation = "https://docs.rs/sf2g"
repository = "https://github.com/crumblingstatue/sf2g"
license = "zlib-acknowledgement"
keywords = ["sfml", "graphics", "game"]
readme = "README.md"
edition = "2024"
rust-version = "1.86"
# We have to exclude a few things, otherwise, the package would be too big for crates.io
exclude = [
    "SFML/doc",
    "SFML/examples",
    "SFML/tools",
    "SFML/extlibs/bin",
    "SFML/extlibs/libs-android",
    "SFML/extlibs/libs-ios",
    "SFML/extlibs/libs-mingw-ucrt",
    "SFML/extlibs/libs-osx",
    "SFML/extlibs/libs-mingw/x64/libFLAC.a",
    "SFML/extlibs/libs-mingw/x64/libogg.a",
    "SFML/extlibs/libs-mingw/x86/libFLAC.a",
    "SFML/extlibs/libs-mingw/x86/libogg.a",
    "SFML/extlibs/libs-msvc/x64/flac.lib",
    "SFML/extlibs/libs-msvc/x64/ogg.lib",
    "SFML/extlibs/libs-msvc/x86/flac.lib",
    "SFML/extlibs/libs-msvc/x86/ogg.lib",
    "SFML/extlibs/libs-msvc-universal/x86/flac.lib",
    "SFML/extlibs/libs-msvc-universal/x86/ogg.lib",
    "SFML/extlibs/libs-msvc-universal/x64/flac.lib",
    "SFML/extlibs/libs-msvc-universal/x64/ogg.lib",
    "SFML/extlibs/libs-msvc-universal/ARM64",
]
[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]

[features]
# Used to skip running certain tests on CI, since it's running in a headless environment.
ci-headless = []

[dependencies]
link-cplusplus = "1.0.9"
num-traits = "0.2.15"

[dependencies.widestring]
version = "1.0"

[dependencies.bitflags]
version = "2.3.3"

[dependencies.image]
version = "0.25.6"
default-features = false

[dependencies.freetype-sys]
version = "0.23"
features = ["bundled"]

# Required because "bundled" freetype-sys requires static libz
[dependencies.libz-sys]
version = "1.1"
features = ["static"]

[build-dependencies]
cc = "1.0.79"
cmake = "0.1.53"
pkg-config = "0.3.31"

[dev-dependencies]
rand.version = "0.9.0"
rand.default-features = false
rand.features = ["small_rng"]
glu-sys = "0.1.4"

[[example]]
name = "borrowed-resources"
doc-scrape-examples = true

[[example]]
name = "mouse"

[[example]]
name = "unicode-text-entry"

[[example]]
name = "vertex-arrays"

[[example]]
name = "shader"
required-features = [ "image/png", "image/jpeg"]

[[example]]
name = "cursor"

[[example]]
name = "vertex-buffers"

[[example]]
name = "spritemark"
required-features = ["image/png"]

[[example]]
name = "opengl"
required-features = ["image/png", "image/jpeg"]

[[example]]
name = "joystick"

[[example]]
name = "window-test"

[[example]]
name = "opengl-context"

[workspace]
